# kubernetes-image-classifier

./: .gitignore  Dockerfile  LICENSE  README.md  Taskfile.yml  dockerignore  locustfile.py  pyproject.toml
app/: config.py  dependencies.py  main.py  model.py
k8s/: deployment.yaml  hpa.yaml  service.yaml  servicemonitor.yaml
